--- a/src/components/build-editor/BuildEditor.css
+++ b/src/components/build-editor/BuildEditor.css
@@ -2,6 +2,7 @@
   max-width: 1000px;
   margin: 0 auto;
   padding: var(--container-padding);
+  padding-top: calc(var(--container-padding) + 1rem);
 }
 
 .editor-header {
